<resources>
    <string name="app_name">ModernMediaUserModel</string>
    <string name="sure">确认</string>
    <string name="camera">拍照</string>
    <string name="select_from_album">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="goto_band">前往绑定</string>
    <string name="mail_address">Email/手机号</string>
    <string name="email">Email</string>
    <string name="band_phone_text">根据国家相关规定，请绑定手机号后使用此功能</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="new_register">新用户注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="sina_login">用微博账号登录</string>
    <string name="sina_login_failed">微博登录失败</string>
    <string name="qq_login">用QQ账号登录</string>
    <string name="qq_login_failed">QQ账号登录失败</string>
    <string name="some_account_login">可以用以下账号登录</string>
    <string name="password_safety">密码安全性</string>
    <string name="password_safety_weak">弱</string>
    <string name="password_safety_mid">中</string>
    <string name="password_safety_high">高</string>
    <string name="get_account_error">账号格式错误</string>
    <string name="password_length_error">密码长度应该在4-16个字符之间</string>
    <string name="nick_name_length_error">用户昵称应该低于8位</string>
    <string name="modify_password">请输入您的旧密码和新密码，如果没有设置过密码，旧密码请留空。</string>
    <string name="old_pwd">旧密码</string>
    <string name="reset_new_pwd">设置新密码</string>
    <string name="complete">完成</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="modify_success">修改成功</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="find_back_pwd1">是否要向 %1$s 发送密码重置邮件</string>
    <string name="forget_email_text1">邮件已发送</string>
    <string name="forget_email_text2">如5分钟后仍未收到密码重置邮件，请与我们联系。</string>
    <string name="need_band">请先绑定手机或邮箱后再设置密码</string>
    <string name="set_band">去设置</string>
    <string name="feed_from">姓名：</string>
    <string name="feed_contect">联系方式： </string>
    <string name="feed_contact_error">联系方式格式错误</string>
    <string name="feed_text">我在商业周刊中发现了一些问题：</string>
    <string name="feed_commit">提交</string>
    <string name="feed_add_pic">上传图片</string>
    <string name="userinfo_desc">您的用户信息如下：</string>
    <string name="userinfo_username">$用户名</string>
    <string name="userinfo_setting">账户设置</string>
    <string name="modify_pwd">修改密码</string>
    <string name="user_sign">个人签名</string>
    <string name="user_info">个人信息</string>
    <string name="user_band">账户绑定</string>
    <string name="user_email">电子邮箱</string>
    <string name="val_email_title">您的邮箱未验证，您可以...</string>
    <string name="send_email_again">重新发送验证邮件</string>
    <string name="send_email_done">邮件已发送</string>
    <string name="change_email">更换邮箱</string>
    <string name="no_band_cannot_change_pwd">没有绑定邮件或者手机，不能设置密码。</string>
    <string name="motify_sign">修改个人签名</string>
    <string name="motify_nickname">修改昵称</string>
    <string name="login_out">退出登录</string>
    <string name="userinfo_valied">未验证</string>
    <string name="userinfo_valied_change">已验证</string>
    <string name="userinfo_receive">接收彭博简报</string>
    <string name="userinfo_receive_success">已订阅彭博简报</string>
    <string name="userinfo_receive_tips">您需要验证邮箱才能接收彭博简报</string>
    <string name="userinfo_receive_tips1">请前往您绑定的邮箱中取消订阅</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="confirm_change">确认修改</string>
    <string name="password_digits">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="card_name">商业笔记</string>
    <string name="vip_code">激活兑换码</string>
    <string name="my_scan">扫一扫</string>
    <string name="search_card">浏览发现</string>
    <string name="message_center">通知中心</string>
    <string name="my_fav">文章收藏</string>
    <string name="user_setting">设置</string>
    <string name="zhanneixin">站内信</string>
    <string name="my_coin">积分商城</string>
    <string name="my_ordered">我的已购</string>
    <string name="my_booked">我的订阅</string>
    <string name="my_licai">财富服务</string>
    <string name="my_buy">杂志购买</string>
    <string name="my_coin_new_mark">NEW</string>
    <string name="user_shejiaozhanghao">社交账号</string>
    <string name="recommend_user">推荐用户</string>
    <string name="back">返回</string>
    <string name="follow_all">全部关注</string>
    <string name="card_num">%s条笔记</string>
    <string name="follow_num">%s人关注</string>
    <string name="card">笔记</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="fans">粉丝</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_failed">关注失败</string>
    <string name="unfollow_success">取消关注成功</string>
    <string name="unfollow_failed">取消关注失败</string>
    <string name="square">社区广场</string>
    <string name="my_homepage">我的首页</string>
    <string name="search">搜索</string>
    <string name="search_key">请输入关键字...</string>
    <string name="search_interest">搜索感兴趣的内容</string>
    <string name="search_timeline">搜索时间线</string>
    <string name="search_history">历史搜索</string>
    <string name="search_clean">清除搜索历史</string>
    <string name="my_music">电台</string>
    <string name="comment">评论</string>
    <string name="write_some_comments">写几句评论</string>
    <string name="card_delete_toast">抱歉！该卡片已删除</string>
    <string name="comment_delete_toast">抱歉！该评论已删除</string>
    <string name="card_not_allow_null_toast">添加的笔记不能为空</string>
    <string name="comment_not_allow_null_toast">添加的评论不能为空</string>
    <string name="card_add_failed_toast">添加笔记失败</string>
    <string name="card_add_success">添加笔记成功</string>
    <string name="card_delete_success">删除笔记成功</string>
    <string name="new_card">新笔记</string>
    <string name="my_friends">我的朋友</string>
    <string name="my_fans">我的粉丝</string>
    <string name="his_friends">他的朋友</string>
    <string name="his_fans">他的粉丝</string>
    <string name="collect">收藏</string>
    <string name="has_collected">已收藏</string>
    <string name="new_comment">新评论</string>
    <string name="write_success">发表成功</string>
    <string name="write_failed">发表评论失败</string>
    <string name="delete_card_failed">删除笔记失败</string>
    <string name="delete_card_success">删除笔记成功</string>
    <string name="share_to_weibo">同时分享到：</string>
    <string name="me">我</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="uncollect_success">取消收藏成功</string>
    <string name="uncollect_failed">取消收藏失败</string>
    <string name="copy_text_success">已复制</string>
    <string name="copy_text">复制文字</string>
    <string name="copy_text_to_clipborad">已复制到剪贴板</string>
    <string name="message_no_message">没有未读通知</string>
    <string name="message_new_fans">有%s个人关注了你</string>
    <string name="message_new_comment">笔记「%1$s」有了%2$s条新评论</string>
    <string name="message_card_is_recommended">笔记「%s」被收入每日精选</string>
    <string name="message_user_is_recommended">你成为了推荐用户</string>
    <string name="create_time">创建于%s</string>
    <string name="user_no_card">你还没记录过笔记</string>
    <string name="no_friend_tip">你还没有关注任何人</string>
    <string name="no_fan_tip">你还没有任何人关注</string>
    <string name="no_article_card">没有该文章的摘要</string>
    <string name="no_search_key">无法匹配该关键词</string>
    <string name="welcom_user">你好，%s!</string>
    <string name="shop_use_notice">积分商城使用须知</string>
    <string name="notice_content">现代社区积分商城会经常为你推荐新鲜有趣的玩意，大部分虚拟物品都需要通过电子邮件发送给你。\n\n在兑换任何物品之前，请务必确认你注册时是否填写了正确的邮箱地址。现在点击下面的按钮，即可确认邮箱地址。\n\n祝你玩得开心！</string>
    <string name="confirm_email">确认邮箱</string>
    <string name="email_address_is">你的邮箱地址是</string>
    <string name="goto_shop">确认进入商城</string>
    <string name="modify_email">修改邮箱</string>
    <string name="input_email">请输入你的邮箱地址</string>
    <string name="input_password">请输入你的密码</string>
    <string name="my_coin_ok">好的</string>
    <string name="get_more_coin">积分任务</string>
    <string name="mine_coin">我的积分</string>
    <string name="has_finished">已获取</string>
    <string name="unfinished">未达成</string>
    <string name="exchange">兑换</string>
    <string name="exchange_coin">积分兑换</string>
    <string name="has_exchanged">已兑换</string>
    <string name="exchange_success">兑换成功</string>
    <string name="exchange_failed">兑换失败</string>
    <string name="my_coin_footer_msg">您积累的所有积分在现代社区账号登陆的APP中都可以使用</string>
    <string name="coin">%1$s&#160;积分</string>
    <string name="add_coin_num">%1$s&#160;+%2$s积分</string>
    <string name="article_card_and_comment">文章摘要与评论</string>
    <string name="share">分享</string>
    <string name="band_account">绑定账号</string>
    <string name="band_already">已绑定此渠道账号</string>
    <string name="phone_number">手机号码</string>
    <string name="band_phone">绑定手机</string>
    <string name="band_email">绑定邮箱</string>
    <string name="band_faild">绑定失败</string>
    <string name="band_weibo">微博</string>
    <string name="band_weixin">微信</string>
    <string name="band_qq">QQ</string>
    <string name="band_address">收货地址</string>
    <string name="banded">去绑定</string>
    <string name="band_yet">未绑定</string>
    <string name="settings_general">通用设置</string>
    <string name="settings_mark_all_read">全部标记为已读</string>
    <string name="settings_clear_cache">清理缓存</string>
    <string name="settings_about">关于</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="hot_line">客服热线：4006503206</string>
    <string name="settings_recommend">向朋友推荐本应用</string>
    <string name="settings_version">程序版本</string>
    <string name="settings_honored">Honored 特别推荐</string>
    <string name="preference_recommend_text">全球商业资讯深度解读，只在商业周刊。下载APP，参加商业峰会，零距离接触大咖！</string>
    <string name="preference_recommend_subject">商业周刊：连接商业精英的国际化新媒体</string>
    <string name="nomal_question">常见问题</string>
    <string name="pay_alread">您已是付费用户。</string>
    <string name="setting_book_single">订阅</string>
    <string name="setting_get_book_single">获赠订阅</string>
    <string name="setting_push_switch">推送开关</string>
    <string name="setting_book_preference">会员与订阅</string>
    <string name="setting_personal_info">个人资料</string>
    <string name="setting_function">功能设置</string>
    <string name="setting_push">消息推送</string>
    <string name="setting_auto_loop">首页焦点图自动轮播</string>
    <string name="setting_wifi_auto_vedio">Wi-Fi下自动播放视频</string>
    <string name="band_email_text1">当前绑定邮箱为 %1$s \n\n更换邮箱后，下次登录可使用新邮箱登录，同时将无法使用旧邮箱登录</string>
    <string name="change_phone_hint">您当前账号绑定的手机号\n%1$s</string>
    <string name="change_phone_hint1">更换手机号后，可以使用新的手机号登录商业周刊APP或者找回密码，同时旧的手机号不再支持。</string>
    <string name="change_phone">更换手机号</string>
    <string name="setting_book">会员与订阅</string>
    <string name="setting_book1">订阅</string>
    <string name="vip_info_tips">以下信息,用来帮助验证账户,以提升安全保障和服务体验。</string>
    <string name="vip_name">姓名</string>
    <string name="vip_name_hint">用于会员身份识别</string>
    <string name="vip_sex">性别</string>
    <string name="vip_sex_hint">男/女</string>
    <string name="vip_birth">生日</string>
    <string name="vip_birth_hint">请选择</string>
    <string name="vip_industry">行业</string>
    <string name="vip_industry_hint">添加您的行业</string>
    <string name="vip_job">职位</string>
    <string name="vip_job_hint">添加您的职位</string>
    <string name="vip_income">年收入</string>
    <string name="vip_income_hint">添加您的年收入</string>
    <string name="vip_phone">手机号</string>
    <string name="vip_phone_hint">仅用于会员服务通知</string>
    <string name="vip_post_hint">暂不支持海外地区配送</string>
    <string name="order_name_hint">填写收件人姓名</string>
    <string name="order_phone">手机</string>
    <string name="order_phone_hint">填写收件人手机号</string>
    <string name="order_address">地址</string>
    <string name="order_address_hint">填写详细地址</string>
    <string name="order_city">城市</string>
    <string name="order_info">新增配送地址</string>
    <string name="order_post">提交</string>
    <string name="vip_mine_notice">会员信息</string>
</resources>