<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <PreferenceCategory android:title="@string/settings_general" >
        <Preference
            android:key="mark_all_read"
            android:title="@string/settings_mark_all_read" />
        <Preference
            android:key="clear_cache"
            android:title="@string/settings_clear_cache" />
         <CheckBoxPreference android:key="auto_roll" android:title="自动轮播"/> 
    </PreferenceCategory>
    -->
    <PreferenceCategory android:title="@string/setting_book" >

        <!--
        <Preference
            android:key="personInfo"
            android:title="个人资料" />
        <Preference
            android:key="band"
            android:title="绑定账号" />
        -->
        <Preference
            android:key="book_dingyue"
            android:title="@string/setting_book1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_about" >

        <!--
             <Preference
            android:key="feedback"
            android:title="@string/settings_feedback" />
        -->
        <Preference
            android:key="recommend"
            android:title="@string/settings_recommend" />
        <Preference
            android:key="version"
            android:title="@string/settings_version" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_honored" >
    </PreferenceCategory>

</PreferenceScreen>