<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/body_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/order_bar_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/article_bar_height"
        android:background="@color/title_bar">

        <ImageView
            android:id="@+id/order_back"
            android:layout_width="@dimen/article_bar_height"
            android:layout_height="@dimen/article_bar_height"
            android:layout_marginLeft="@dimen/dp5"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/order_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_info"
            android:textColor="@color/user_center_head"
            android:textSize="@dimen/dp18_textsize"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/list_item_divider"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginTop="@dimen/dp20"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_bg"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/vip_name"
            android:textColor="@color/user_center_head"
            android:textSize="@dimen/dp13_textsize"/>

        <EditText
            android:id="@+id/order_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/dp20_textsize"
            android:background="@null"
            android:hint="@string/order_name_hint"
            android:maxLength="40"
            android:textSize="@dimen/dp13_textsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:id="@+id/linear_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_bg"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/order_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/order_phone"
            android:textColor="@color/user_center_head"
            android:textSize="@dimen/dp13_textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="+86"
            android:textColor="@color/user_center_head"
            android:textSize="@dimen/dp13_textsize"/>

        <EditText
            android:id="@+id/order_phone_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/order_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/dp13_textsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:id="@+id/linear_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_bg"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/order_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/order_city"
            android:textColor="@color/user_center_head"
            android:textSize="@dimen/dp13_textsize"/>

        <EditText
            android:id="@+id/order_city_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/vip_post_hint"
            android:maxLength="40"
            android:textSize="@dimen/dp13_textsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/gray_line"/>

    <LinearLayout
        android:id="@+id/linear_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_bg"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/order_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/order_address"
            android:textColor="@color/user_center_head"
            android:textSize="@dimen/dp13_textsize"/>

        <EditText
            android:id="@+id/order_address_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/order_address_hint"
            android:maxLength="40"
            android:textSize="@dimen/dp13_textsize"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/gray_line"/>


    <Button
        android:id="@+id/order_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/vip_black_btn_bg"
        android:text="@string/order_post"
        android:textColor="@color/white_bg"
        android:textSize="@dimen/dp16_textsize"/>


</LinearLayout>